 
  o Updated Polish translation (Lukasz Daniel)

  o Updated Romanian translation (thanks to Adrian Dusa).

  o Updated Russian translation (thanks to Alexey Shipunov).

  o Updated Slovenian translation (thanks to Jaro Lajovic and Matjaz Jeran).

  o Updated Spanish translation (thanks to Manuel Munoz Marquez).

  o Fixed omissions to R-Rcmdr.pot file (reported by Jaro Lajovic)

Changes to Version 1.9-0

  o Improvements to boxplot dialog.

  o Improvements to save graphs dialogs (adapting suggestions of Milan Bouchet-Valat).

  o Added data import from SAS xport files (suggestion of Peter Mandeville).

  o Added ability to import Excel data sets generally via XLConnect package (suggestion of Michael Weylandt, only for Windows at this point).

  o Added IQR to numerical summaries and table of statistics (suggestion of Peter Mandeville).

  o Updated French translation (thanks to Milan Bouchet-Valat).

  o Updated Korean translation (thanks to Shin Jong-Hwa).

  o Updated Polish translation (thanks to Lukasz Daniel).

  o Updated Spanish translation (thanks to Manuel Munoz Marquez).

  o Updated Xyplot dialog (courtesy of Richard Heiberger).

  o Small fixes and improvements.

Changes to Version 1.8-5

  o New Polish translation (courtesy of Lukasz Daniel).
  
  o Small GUI improvements (suggestions/code of Milan Bouchet-Valat).
  
  o globalVariables() invoked for R 2.15.1 and above.
  
  o Added standard button icons.
   
Changes to Version 1.8-4

  o Fixes to Italian translation (from Stefano Calza).
  
  o Updated Korean translation (courtesy of Shin Jong-Hwa).
  
  o Fixed bug in numSummary() that surfaced when only one quantile was specified (reported by Peter B. Mandeville).
  
  o Titles for sets of check boxes now left-aligned (suggestion of Milan Bouchet-Valat).
  
  o Fix to Spanish translation (courtesy of Manuel Munoz Marquez).
  
  o Fix to data set edit button, which was removing case names (reported by Gilles Le Pape).
  