@@ -1,6 +1,6 @@
 Package: Rcmdr
 Version: 1.9-1
-Date: 2012/09/04
+Date: 2012/09/07
 Title: R Commander
 Authors@R: c(person("John", "Fox", role = c("aut", "cre"), email = "jfox@mcmaster.ca"),
     person("Liviu", "Andronic", role = "ctb"),
