@@ -14,7 +14,9 @@ Changes to Version 1.9-1
 
   o Updated Spanish translation (thanks to Manuel Munoz Marquez).
 
-  o Fixed omissions to R-Rcmdr.pot file (reported by Jaro Lajovic)
+  o Fixed omissions to R-Rcmdr.pot file (reported by Jaro Lajovic).
+
+  o Small fixes.
 
 Changes to Version 1.9-0
 
